<resources>
    <string name="app_name">reMINDme</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="caregiver">Caregiver</string>
    <string name="security">Security Question</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="securityanswer">Security Question Answer</string>
    <string-array name="questions_array">
        <item>What is your mother\'s maiden name?</item>
        <item>What is the name of your first pet?</item>
        <item>Where were you born?</item>
        <item>What is the name of the street you grew up on?</item>
        <item>Who was your first teacher?</item>
    </string-array>


    <string name="title_activity_register">Register</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_task_list">TaskList</string>
    <string name="title_activity_puzzle">Puzzle</string>
</resources>
